--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RocketNews</title>
     <link rel="stylesheet" href="style.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&family=Work+Sans:wght@400;500;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -44,10 +42,6 @@
 
         <a class="form-content-link" href="">Deixe me ler primeiro ➜</a>
     </main>
-
-    <footer>
-
-    </footer>
 </body>
 
 </html>
