--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header class="header">
-        <img class="header-logo" src="assets/logo.svg" alt="Logo da RocketNews">
+        <img class="header-logo" src="logo.svg" alt="Logo da RocketNews">
     </header>
 
     <main class="content">
